test/message/esm_loader_not_found_cjs_hint_relative.out
(node:*) ExperimentalWarning: --experimental-loader is an experimental feature. This feature could change at any time
(Use `* --trace-warnings ...` to show where the warning was created)
node:internal/process/esm_loader:*
    internalBinding('errors').triggerUncaughtException(
                              ^

Error [ERR_MODULE_NOT_FOUND]: Cannot find module '*test*common*fixtures' imported from *
Did you mean to import ./test/common/fixtures.js?
    at new NodeError (node:internal/errors:*:*)
    at finalizeResolution (node:internal/modules/esm/resolve:*:*)
    at moduleResolve (node:internal/modules/esm/resolve:*:*)
    at Loader.defaultResolve [as _resolve] (node:internal/modules/esm/resolve:*:*)
    at Loader.resolve (node:internal/modules/esm/loader:*:*)
    at Loader.getModuleJob (node:internal/modules/esm/loader:*:*)
    at Loader.import (node:internal/modules/esm/loader:*:*)
    at node:internal/process/esm_loader:*:*
    at initializeLoader (node:internal/process/esm_loader:*:*)
    at Object.loadESM (node:internal/process/esm_loader:*:*) {
  code: 'ERR_MODULE_NOT_FOUND'
}
